--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ngneat/tailwind": "^7.0.3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -30,6 +31,7 @@
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^2.2.1",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
